Adds Editor component

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
     />
-    <style>
-      main {
-        max-width: 768px;
-        padding: 24px;
-        margin: 0 auto;
-      }
-    </style>
   </head>
   <body>
-    <main id="root"></main>
+    <div id="root"></div>
     <script src="index.js"></script>
   </body>
 </html>
